style-update and bug-fix
bug fix - hints are now work properly, keep the revealed cells open after effect is over
style update - cropped gif images, fixed glowing headlines widths

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
     height: max-content;
     width: 450px;
     border-radius: 15px;
-    background-color: rgba(3, 4, 7, 0.87);
+    background-color: rgba(21, 28, 48, 0.75);
 }
 
 .board-wrap{
@@ -37,6 +37,10 @@ html, body {
       text-shadow: -0.5px 0 rgb(245, 245, 245, 0.5), 0 0.5px rgb(245, 245, 245, 0.5), 0.5px 0 rgb(245, 245, 245, 0.5), 0 -0.5px rgb(245, 245, 245, 0.5);
       user-select: none;
 
+  }
+  .headline{
+      width: 420px;
+      margin-left: 50px;
   }
   .hints-txt{
       position: absolute;
@@ -92,8 +96,8 @@ tr .revealed::selection{
       padding: 10px;
       padding-left: 25px;
       padding-right: 25px;
-      background: linear-gradient(to right, rgb(116, 17, 66), rgb(102, 44, 68));
-      color: whitesmoke;
+      background: linear-gradient(to right, rgb(116, 17, 66, 0.8), rgba(111, 62, 82, 0.8));
+      color: rgba(245, 245, 245, 0.729);
       border-radius: 5px;
       cursor: pointer;
       margin: 5px;
@@ -109,12 +113,14 @@ tr .revealed::selection{
     margin-left: 100px;
     border-radius: 5px;
     font-family: 'Lobster', cursive;
-    background: linear-gradient(to right, rgb(155, 97, 126), rgb(192, 82, 128));
+    font-size: 0.9em;
+    background: linear-gradient(to right, rgb(155, 97, 126, 0.8), rgb(192, 82, 128, 0.8));
     color: rgb(14, 14, 14);
     transition: box-shadow 0.4s;
     cursor: pointer;
     user-select: none;
     border: 1px solid rgb(230, 194, 255);
+    color: #03101eb7;
 
 }
 .restart-btn{
@@ -150,12 +156,8 @@ tr .revealed::selection{
     width: 20px;
     height: 20px;
 }
-.confirm-selection.glow{
-    transition: text-shadow 1s
-}
 
-.confirm-selection:hover,
-.confirm-selection.glow {
+.confirm-selection:hover {
     text-shadow: 0 0 10px rgb(255, 63, 63);
 }
 .heart{
@@ -257,6 +259,8 @@ tr .revealed::selection{
     text-shadow: -0.5px 0 rgb(245, 245, 245, 0.5), 0 0.5px rgb(245, 245, 245, 0.5), 0.5px 0 rgb(245, 245, 245, 0.5), 0 -0.5px rgb(245, 245, 245, 0.5);
     user-select: none;
     text-decoration: underline 1px;
+    width: 120px;
+    margin-left: 180px;
 }
 
 .safeclick-txt{
@@ -280,8 +284,8 @@ tr .revealed::selection{
 
 .lamp-img-left{
     position: absolute;
-    width: 70px;
-    height: 70px;
+    width: 85px;
+    height: 85px;
     top: 40px;
     left: 320px;
     opacity: 0.7;
@@ -292,8 +296,7 @@ tr .revealed::selection{
     margin-left: 380px;
     position: absolute;
     top: 42px;
-    width: 70px;
-    height: 70px;
+    width: 85px;
+    height: 85px;
     opacity: 0.7;
-    user-select: none;
 }
